--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - google_fonts/
+    - google_fonts/FlowCircular/
+    - google_fonts/Outfit/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
