--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^2.2.0
   go_router: ^10.0.0
   google_fonts: ^5.1.0
+  connectivity_plus: ^4.0.2
 
 dev_dependencies:
   flutter_test:
