--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--TODO: Remove android:usesCleartextTraffic after debug - Enables http requests-->
     <application
         android:label="oes"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
