--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^5.1.0
   connectivity_plus: ^4.0.2
   http: ^1.1.0
+  dio: ^5.3.2
 
 dev_dependencies:
   flutter_test:
