--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   connectivity_plus: ^4.0.2
   http: ^1.1.0
   dio: ^5.3.2
+  device_info_plus: ^9.0.3
 
 dev_dependencies:
   flutter_test:
