--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.0
   go_router: ^10.0.0
-  google_fonts: ^5.1.0
+  google_fonts: ^4.0.4
   connectivity_plus: ^4.0.2
-  http: ^1.1.0
+  http: ^0.13.6
   dio: ^5.3.2
   device_info_plus: ^9.0.3
   flutter_secure_storage: ^9.0.0
+  signalr_netcore: ^1.3.6
+  flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
   flutter_test:
