--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   signalr_netcore: ^1.3.6
   flutter_colorpicker: ^1.0.3
+  flutter_markdown_selectionarea: ^0.6.17+1
+  markdown: ^7.2.1
 
 dev_dependencies:
   flutter_test:
