--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   markdown: ^7.2.1
   url_launcher: ^6.2.4
   file_picker: ^6.1.1
+  download: ^1.0.0
 
 dev_dependencies:
   flutter_test:
