--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,20 +32,20 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  shared_preferences: ^2.2.0
-  go_router: ^13.0.1
-  google_fonts: ^4.0.4
-  connectivity_plus: ^5.0.2
-  http: ^0.13.6
+  shared_preferences: ^2.2.2
+  go_router: ^13.2.1
+  google_fonts: ^6.2.1
+  connectivity_plus: ^6.0.1
+  http: ^1.2.1
   dio: ^5.3.2
-  device_info_plus: ^9.0.3
+  device_info_plus: ^10.0.1
   flutter_secure_storage: ^9.0.0
-  signalr_netcore: ^1.3.6
+  signalr_netcore: ^1.3.7
   flutter_colorpicker: ^1.0.3
   flutter_markdown_selectionarea: ^0.6.17+1
-  markdown: ^7.2.1
-  url_launcher: ^6.2.4
-  file_picker: ^6.1.1
+  markdown: ^7.2.2
+  url_launcher: ^6.2.5
+  file_picker: ^8.0.0+1
   download: ^1.0.0
 
 dev_dependencies:
