--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/config/
     - google_fonts/
     - google_fonts/FlowCircular/
     - google_fonts/Outfit/
