--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   file_picker: ^8.0.0+1
   download: ^1.0.0
   pdf: ^3.10.8
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
